src/org/aikodi/jlo/input/JLoParser.java
// Generated from /Users/marko/git/workspace/jlo/src/org/aikodi/jlo/input/JLo.g4 by ANTLR 4.5
package org.aikodi.jlo.input;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JLoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, NAMESPACE=5, ABSTRACT=6, INIT=7, NATIVE=8, 
		FIELD=9, BLOCKING=10, PROPAGATING=11, LIKE=12, IMPORT=13, SELF=14, ARROW=15, 
		SUBOBJECT=16, EXTENDS=17, KLASS=18, LAYER=19, TRUE=20, FALSE=21, NULL=22, 
		UNDERSCORE=23, PIPE=24, MINUS=25, PLUS=26, SLASH=27, STAR=28, SEMI=29, 
		DOT=30, COMMA=31, LBRACE=32, RBRACE=33, LPAR=34, RPAR=35, ASSIGN=36, EQUAL=37, 
		NOTEQUAL=38, RETURN=39, EXPONENTIATION=40, AMPERSAND=41, TYPEANNOTATION=42, 
		SMALLER=43, BIGGER=44, LEFTSHIFT=45, RIGHTSHIFT=46, RIGHTRIGHTSHIFT=47, 
		HexLiteral=48, DecimalLiteral=49, OctalLiteral=50, BinaryLiteral=51, FloatingPointLiteral=52, 
		CharacterLiteral=53, StringLiteral=54, ASSERT=55, Identifier=56, WS=57, 
		COMMENT=58, LINE_COMMENT=59;
	public static final int
		RULE_compilationUnit = 0, RULE_namespace = 1, RULE_importDeclaration = 2, 
		RULE_namespaceReference = 3, RULE_klass = 4, RULE_classBody = 5, RULE_bodyElement = 6, 
		RULE_member = 7, RULE_method = 8, RULE_methodHeader = 9, RULE_returnType = 10, 
		RULE_keywordBlock = 11, RULE_modifier = 12, RULE_parameters = 13, RULE_parameterList = 14, 
		RULE_parameter = 15, RULE_implementation = 16, RULE_subobject = 17, RULE_inheritanceRelation = 18, 
		RULE_type = 19, RULE_qualifiedName = 20, RULE_expression = 21, RULE_block = 22, 
		RULE_arguments = 23, RULE_statement = 24, RULE_literal = 25, RULE_integerNumberLiteral = 26, 
		RULE_booleanLiteral = 27;
	public static final String[] ruleNames = {
		"compilationUnit", "namespace", "importDeclaration", "namespaceReference", 
		"klass", "classBody", "bodyElement", "member", "method", "methodHeader", 
		"returnType", "keywordBlock", "modifier", "parameters", "parameterList", 
		"parameter", "implementation", "subobject", "inheritanceRelation", "type", 
		"qualifiedName", "expression", "block", "arguments", "statement", "literal", 
		"integerNumberLiteral", "booleanLiteral"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'super'", "'%'", "'<='", "'>='", "'namespace'", "'abstract'", "'init'", 
		"'native'", "'field'", "'blocking'", "'propagating'", "'like'", "'import'", 
		"'self'", "'->'", "'subobject'", "'extends'", "'class'", "'layer'", "'true'", 
		"'false'", "'null'", "'_'", "'|'", "'-'", "'+'", "'/'", "'*'", "';'", 
		"'.'", "','", "'{'", "'}'", "'('", "')'", "'='", "'=='", "'!='", "'return'", 
		"'^'", "'&'", "':'", "'<'", "'>'", "'<<'", "'>>'", "'>>>'", null, null, 
		null, null, null, null, null, "'assert'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, "NAMESPACE", "ABSTRACT", "INIT", "NATIVE", 
		"FIELD", "BLOCKING", "PROPAGATING", "LIKE", "IMPORT", "SELF", "ARROW", 
		"SUBOBJECT", "EXTENDS", "KLASS", "LAYER", "TRUE", "FALSE", "NULL", "UNDERSCORE", 
		"PIPE", "MINUS", "PLUS", "SLASH", "STAR", "SEMI", "DOT", "COMMA", "LBRACE", 
		"RBRACE", "LPAR", "RPAR", "ASSIGN", "EQUAL", "NOTEQUAL", "RETURN", "EXPONENTIATION", 
		"AMPERSAND", "TYPEANNOTATION", "SMALLER", "BIGGER", "LEFTSHIFT", "RIGHTSHIFT", 
		"RIGHTRIGHTSHIFT", "HexLiteral", "DecimalLiteral", "OctalLiteral", "BinaryLiteral", 
		"FloatingPointLiteral", "CharacterLiteral", "StringLiteral", "ASSERT", 
		"Identifier", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JLo.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JLoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CompilationUnitContext extends ParserRuleContext {
		public NamespaceContext namespace() {
			return getRuleContext(NamespaceContext.class,0);
		}
		public TerminalNode EOF() { return getToken(JLoParser.EOF, 0); }
		public List<ImportDeclarationContext> importDeclaration() {
			return getRuleContexts(ImportDeclarationContext.class);
		}
		public ImportDeclarationContext importDeclaration(int i) {
			return getRuleContext(ImportDeclarationContext.class,i);
		}
		public List<KlassContext> klass() {
			return getRuleContexts(KlassContext.class);
		}
		public KlassContext klass(int i) {
			return getRuleContext(KlassContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JLoListener ) ((JLoListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JLoListener ) ((JLoListener)listener).exitCompilationUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JLoVisitor ) return ((JLoVisitor<? extends T>)visitor).visitCompilationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			namespace();
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(57);
				importDeclaration();
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ABSTRACT) | (1L << INIT) | (1L << KLASS))) != 0)) {
				{
				{
				setState(63);
				klass();
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(69);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamespaceContext extends ParserRuleContext {
		public TerminalNode NAMESPACE() { return getToken(JLoParser.NAMESPACE, 0); }
		public NamespaceReferenceContext namespaceReference() {
			return getRuleContext(NamespaceReferenceContext.class,0);
		}
		public NamespaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespace; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JLoListener ) ((JLoListener)listener).enterNamespace(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JLoListener ) ((JLoListener)listener).exitNamespace(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JLoVisitor ) return ((JLoVisitor<? extends T>)visitor).visitNamespace(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NamespaceContext namespace() throws RecognitionException {
		NamespaceContext _localctx = new NamespaceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_namespace);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(NAMESPACE);
			setState(72);
			namespaceReference();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDeclarationContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(JLoParser.IMPORT, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ImportDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JLoListener ) ((JLoListener)listener).enterImportDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JLoListener ) ((JLoListener)listener).exitImportDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JLoVisitor ) return ((JLoVisitor<? extends T>)visitor).visitImportDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportDeclarationContext importDeclaration() throws RecognitionException {
		ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(IMPORT);
			setState(75);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamespaceReferenceContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(JLoParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(JLoParser.Identifier, i);
		}
		public List<TerminalNode> DOT() { return getTokens(JLoParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(JLoParser.DOT, i);
		}
		public NamespaceReferenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespaceReference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JLoListener ) ((JLoListener)listener).enterNamespaceReference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JLoListener ) ((JLoListener)listener).exitNamespaceReference(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JLoVisitor ) return ((JLoVisitor<? extends T>)visitor).visitNamespaceReference(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NamespaceReferenceContext namespaceReference() throws RecognitionException {
		NamespaceReferenceContext _localctx = new NamespaceReferenceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_namespaceReference);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(Identifier);
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(78);
				match(DOT);
				setState(79);
				match(Identifier);
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KlassContext extends ParserRuleContext {
		public TerminalNode KLASS() { return getToken(JLoParser.KLASS, 0); }
		public TerminalNode Identifier() { return getToken(JLoParser.Identifier, 0); }
		public ClassBodyContext classBody() {
			return getRuleContext(ClassBodyContext.class,0);
		}
		public List<ModifierContext> modifier() {
			return getRuleContexts(ModifierContext.class);
		}
		public ModifierContext modifier(int i) {
			return getRuleContext(ModifierContext.class,i);
		}
		public InheritanceRelationContext inheritanceRelation() {
			return getRuleContext(InheritanceRelationContext.class,0);
		}
		public KlassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_klass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JLoListener ) ((JLoListener)listener).enterKlass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JLoListener ) ((JLoListener)listener).exitKlass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JLoVisitor ) return ((JLoVisitor<? extends T>)visitor).visitKlass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KlassContext klass() throws RecognitionException {
		KlassContext _localctx = new KlassContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_klass);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ABSTRACT || _la==INIT) {
				{
				{
				setState(85);
				modifier();
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(91);
			match(KLASS);
			setState(92);
			match(Identifier);
			setState(94);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(93);
				inheritanceRelation();
				}
			}

			setState(96);
			classBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassBodyContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(JLoParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(JLoParser.RBRACE, 0); }
		public List<BodyElementContext> bodyElement() {
			return getRuleContexts(BodyElementContext.class);
		}
		public BodyElementContext bodyElement(int i) {
			return getRuleContext(BodyElementContext.class,i);
		}
		public ClassBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JLoListener ) ((JLoListener)listener).enterClassBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JLoListener ) ((JLoListener)listener).exitClassBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JLoVisitor ) return ((JLoVisitor<? extends T>)visitor).visitClassBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassBodyContext classBody() throws RecognitionException {
		ClassBodyContext _localctx = new ClassBodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_classBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(LBRACE);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ABSTRACT) | (1L << INIT) | (1L << FIELD) | (1L << Identifier))) != 0)) {
				{
				{
				setState(99);
				bodyElement();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyElementContext extends ParserRuleContext {
		public MemberContext member() {
			return getRuleContext(MemberContext.class,0);
		}
		public BodyElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bodyElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JLoListener ) ((JLoListener)listener).enterBodyElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JLoListener ) ((JLoListener)listener).exitBodyElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JLoVisitor ) return ((JLoVisitor<? extends T>)visitor).visitBodyElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyElementContext bodyElement() throws RecognitionException {
		BodyElementContext _localctx = new BodyElementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_bodyElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			member();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MemberContext extends ParserRuleContext {
		public MemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_member; }
	 
		public MemberContext() { }
		public void copyFrom(MemberContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MemberMethodContext extends MemberContext {
		public MethodContext method() {
			return getRuleContext(MethodContext.class,0);
		}
		public MemberMethodContext(MemberContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JLoListener ) ((JLoListener)listener).enterMemberMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JLoListener ) ((JLoListener)listener).exitMemberMethod(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JLoVisitor ) return ((JLoVisitor<? extends T>)visitor).visitMemberMethod(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MemberSubobjectContext extends MemberContext {
		public SubobjectContext subobject() {
			return getRuleContext(SubobjectContext.class,0);
		}
		public MemberSubobjectContext(MemberContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JLoListener ) ((JLoListener)listener).enterMemberSubobject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JLoListener ) ((JLoListener)listener).exitMemberSubobject(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JLoVisitor ) return ((JLoVisitor<? extends T>)visitor).visitMemberSubobject(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MemberFieldContext extends MemberContext {
		public TerminalNode FIELD() { return getToken(JLoParser.FIELD, 0); }
		public TerminalNode Identifier() { return getToken(JLoParser.Identifier, 0); }
		public TerminalNode TYPEANNOTATION() { return getToken(JLoParser.TYPEANNOTATION, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public MemberFieldContext(MemberContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JLoListener ) ((JLoListener)listener).enterMemberField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JLoListener ) ((JLoListener)listener).exitMemberField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JLoVisitor ) return ((JLoVisitor<? extends T>)visitor).visitMemberField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MemberContext member() throws RecognitionException {
		MemberContext _localctx = new MemberContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_member);
		try {
			setState(115);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new MemberMethodContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				method();
				}
				break;
			case 2:
				_localctx = new MemberSubobjectContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				subobject();
				}
				break;
			case 3:
				_localctx = new MemberFieldContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(111);
				match(FIELD);
				setState(112);
				match(Identifier);
				setState(113);
				match(TYPEANNOTATION);
				setState(114);
				type();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
